--- a/search/index.html
+++ b/search/index.html
@@ -1,7 +1,124 @@
-<div id="results">
+---
+layout: default
+---
+
+<section id="results">
   <h1><!-- `key` listing for `value` --></h1>
 
   <ul class="results">
     <!-- results lists -->
   </ul>
-</div>
+
+	<script>
+		var map = getParam();
+
+		$.each(map, function(type, value) {
+			if (value !== null) {
+				$.getJSON('/search.json', function(data) {
+					posts = filterPostsByPropertyValue(data, type, value);
+					if (posts.length === 0) {
+						noResultPage(value);
+					} else {
+						layoutResultPage(type, value, posts);
+					}
+				});
+			}
+		});
+
+		function noResultPage(value) {
+		     $('#results').find('h1').text('No Results Found.').after(
+		      '<p>We couldn\'t find anything associated with ‘' + value + '’ here.</p>'
+		    );
+  		};
+
+		var layoutResultPage = function(property, value, posts) {
+			var $container = $('#results');
+			if ($container.length === 0) return;
+
+			// Update the header
+			$container.find('h1').text(property
+			  + ' Listing for ‘'
+			  + value
+			  + '’'
+			);
+
+			// Loop through each post to format it
+			$results = $container.find('ul.results');
+			for (var i in posts) {
+			  // Create an unordered list of the post's tags
+			  var tagsList = '<ul class="tags">',
+			      post     = posts[i],
+			      tags     = post.tags;
+
+			  for (var j in tags) {
+			    tagsList += ''
+			      + '<li>'
+			        + '<a href="/search.html?tags=' + tags[j] + '">' + tags[j] + '</a>'
+			      + '</li>';
+			  }
+			  tagsList += '</ul>';
+
+			  $results.append(
+			    '<li>'
+			      // Page anchor
+			      + '<header>'
+			        + '<h1>'
+			          + '<a href="' + post.href + '">' + post.title + '</a>'
+			        + '</h1>'
+			        // Post date
+			        + '<h2>'
+			          + post.date.formatted
+			          + ' in <a href="/search.html?category=' + post.category + '">'
+			          +  post.category + '</a>'
+			        + '</h2>'
+			        // Tags
+			        + tagsList
+			      + '</header>'
+			    + '</li>'
+			  );
+			}
+  		};
+
+		function filterPostsByPropertyValue(data, type, value) {
+			var returnPosts = [];
+
+			if(!type || !value || !data) {
+				return;
+			}
+
+			for(var i = 0, length = data.length; i<length; i++) {
+				if(!data[i]) {
+					break;
+				}
+				var tags = data[i].tags;
+				for(var j = 0, subLength = tags.length; j<subLength; j++) {
+					if(tags[j] === value) {
+						returnPosts.push(data[i]);
+					}
+				}
+			}
+			return returnPosts;
+		}
+
+		function getParam() {
+			var searchQuery = window.location.search,
+				querys = searchQuery !== "" ? searchQuery.substring(1).split('&') : [],
+				o = {},
+				enumMap = {
+					CATE : 'category',
+					TAGS : 'tags'
+				};
+
+			for (var i = 0; i<querys.length; i++) {
+				var inputValue = querys[i].split('=');
+				if(inputValue[0] === enumMap.CATE) {
+					o[enumMap.CATE] = inputValue[1];
+				} else if(inputValue[0] === enumMap.TAGS) {
+					o[enumMap.TAGS] = inputValue[1];
+				}
+			}
+
+			return o; 
+		}
+	</script>
+</section>
