remove margin bottom

--- a/search/index.html
+++ b/search/index.html
@@ -63,7 +63,7 @@ layout: default
 			    '<li>'
 			      // Page anchor
 			      + '<header>'
-			        + '<h2>'
+			        + '<h2 style="margin-bottom:0px;">'
 			          + '<a href="' + post.href + '">' + post.title + '</a>'
 			        + '</h2>'
 			        // Tags
