- add google search - add define line between each post

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
                 <div class="read-all">
                     <a  href="{{ post.url | prepend: site.baseurl }}"><i class="fa fa-newspaper-o"></i>Read All</a>
                 </div>
-                <hr>
+                <hr class="border-hr"/>
               </li>
             {% endfor %}
         </ul>
@@ -68,6 +68,16 @@ layout: default
     <!-- <button class="anchor"><i class="fa fa-anchor"></i></button> -->
     <div class="right">
         <div class="wrap">
+            <div class="side">
+                <div>
+                  <i class="fa fa-search" aria-hidden="true"></i>
+                  검색
+                </div>
+                <section>
+                  <script async src="https://cse.google.com/cse.js?cx=005279785671642320851:h2vefle2y_8"></script>
+                  <div class="gcse-search"></div>
+                </section>
+            </div>
             <div class="side">
                 <div>
                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
